--- a/templates/mymodel/users/add_success.html
+++ b/templates/mymodel/users/add_success.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>add success</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'mymodel/users/model.css' %}">
 </head>
 <body>
     <h2>{{info}}</h2>
